--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -45,7 +45,8 @@ pipeline {
                 script {
                     def dockerImageTag = "${DOCKER_IMAGE_BASE}:${BUILD_NUMBER}"
                     dir('spring-boot-app') {
-                        sh "docker build -t ${dockerImageTag} ."
+                        sh 'ls -ltr'
+                        sh "docker build -t ${dockerImageTag} -f Dockerfile ."
                     }
                     def dockerImage = docker.image(dockerImageTag)
                     docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
