--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -1,7 +1,7 @@
 pipeline {
     agent {
         docker {
-            image 'adoptopenjdk/openjdk17:alpine-jre'
+            image 'eclipse-temurin:17-jdk-alpine'
             args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
         }
     }
