--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -40,22 +40,26 @@ pipeline {
             }
         }
 
-        stage('Build and Push Docker Image') {
-            steps {
-                script {
-                    def dockerImageTag = "${DOCKER_IMAGE_BASE}:${BUILD_NUMBER}"
-                    dir('spring-boot-app') {
-                        sh 'ls -ltr'
-                        sh "docker build -t ${dockerImageTag} -f Dockerfile ."
-                    }
-                    def dockerImage = docker.image(dockerImageTag)
-                    docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
-                        dockerImage.push()
-                        dockerImage.push("latest")
+
+                    stage('Build and Push Docker Image') {
+                steps {
+                    script {
+                        def dockerImageTag = "${DOCKER_IMAGE_BASE}:${BUILD_NUMBER}"
+                        dir('spring-boot-app') {
+                            // Install Docker CLI inside container
+                            sh 'apk add --no-cache docker-cli'
+                            sh 'ls -ltr'
+                            sh "docker build -t ${dockerImageTag} -f Dockerfile ."
+                        }
+                        def dockerImage = docker.image(dockerImageTag)
+                        docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
+                            dockerImage.push()
+                            dockerImage.push("latest")
+                        }
                     }
                 }
             }
-        }
+
 
         stage('Update Deployment File') {
             steps {
