--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -47,10 +47,8 @@ pipeline {
                     dir('spring-boot-app') {
                         // Install Docker CLI inside container
                         sh 'apk add --no-cache docker-cli'
-                        sh 'ls -ltr'
                         sh "docker build -t ${dockerImageTag} -f Dockerfile ."
                     }
-
                     def dockerImage = docker.image(dockerImageTag)
                     docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
                         dockerImage.push()
@@ -60,23 +58,24 @@ pipeline {
             }
         }
 
-      stage('Update Deployment File') {
-         agent { label 'your-jenkins-agent' } // runs on host
-        steps {
-        withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-            sh '''
-                git config user.email "${GIT_EMAIL}"
-                git config user.name "Induwara Mihisara"
-                BUILD_NUMBER=${BUILD_NUMBER}
-                sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" spring-boot-app-deployment/deployment.yml
-                git add spring-boot-app-deployment/deployment.yml
-                git commit -m "Update deployment image to version ${BUILD_NUMBER}" || echo "No changes to commit"
-                git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
-            '''
+        // Run Git updates on the host, not inside Docker
+        stage('Update Deployment File') {
+            agent any  // Use host Jenkins agent
+            steps {
+                withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+                    sh '''
+                        git config user.email "${GIT_EMAIL}"
+                        git config user.name "Induwara Mihisara"
+                        BUILD_NUMBER=${BUILD_NUMBER}
+                        sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" spring-boot-app-deployment/deployment.yml
+                        git add spring-boot-app-deployment/deployment.yml
+                        git commit -m "Update deployment image to version ${BUILD_NUMBER}" || echo "No changes to commit"
+                        git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                    '''
+                }
+            }
         }
     }
-}
-
 
     post {
         always { echo "Pipeline finished." }
