--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -1,76 +1,54 @@
 pipeline {
-    agent {
-        docker {
-            image 'maven:3.9.4-eclipse-temurin-17-alpine'
-            args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
-        }
-    }
+    agent any
 
     environment {
-        SONAR_URL = "http://3.83.239.186:9000"
-        GIT_REPO_NAME = "Ultimate-CI-CD-Pipeline-SpringBoot-Application"
-        GIT_USER_NAME = "Mihisara29"
-        GIT_EMAIL = "induwaramihisara@gmail.com"
-        DOCKER_IMAGE_BASE = "im29/ultimate-cicd"
+        DOCKER_HUB_CREDENTIALS = 'docker-hub-credentials-id' // Replace with your Docker Hub credentials ID
+        GITHUB_TOKEN = credentials('github') // Replace with your GitHub token credentials ID
+        IMAGE_NAME = 'im29/ultimate-cicd'
     }
 
     stages {
-        stage('Checkout') {
-            steps {
-                echo 'Checking out the repository...'
-                git branch: 'main', url: 'https://github.com/Mihisara29/Ultimate-CI-CD-Pipeline-SpringBoot-Application.git'
-            }
-        }
 
-        stage('Build and Test') {
-            steps {
-                dir('spring-boot-app') {
-                    sh 'mvn clean package -B'
-                }
+        stage('Build Docker Image') {
+            agent {
+                docker { image 'docker:24.0.5-cli' // docker CLI container
+                         args '-v /var/run/docker.sock:/var/run/docker.sock' }
             }
-        }
-
-        stage('Static Code Analysis') {
-            steps {
-                withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-                    dir('spring-boot-app') {
-                        sh "mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}"
-                    }
-                }
-            }
-        }
-
-        stage('Build and Push Docker Image') {
             steps {
                 script {
-                    def dockerImageTag = "${DOCKER_IMAGE_BASE}:${BUILD_NUMBER}"
-                    dir('spring-boot-app') {
-                        sh 'apk add --no-cache docker-cli'
-                        sh "docker build -t ${dockerImageTag} -f Dockerfile ."
-                    }
-                    def dockerImage = docker.image(dockerImageTag)
-                    docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
-                        dockerImage.push()
-                        dockerImage.push("latest")
-                    }
+                    sh '''
+                        docker build -t ${IMAGE_NAME}:${BUILD_NUMBER} -f spring-boot-app/Dockerfile spring-boot-app
+                    '''
                 }
             }
         }
 
-        // ✅ Run this stage OUTSIDE Docker container
-        stage('Update Deployment File') {
-            agent any  // Runs on host, not in Docker container
+        stage('Push Docker Image') {
+            agent any
             steps {
-                withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+                script {
+                    sh '''
+                        echo $DOCKER_HUB_CREDENTIALS | docker login -u im29 --password-stdin
+                        docker push ${IMAGE_NAME}:${BUILD_NUMBER}
+                        docker tag ${IMAGE_NAME}:${BUILD_NUMBER} ${IMAGE_NAME}:latest
+                        docker push ${IMAGE_NAME}:latest
+                    '''
+                }
+            }
+        }
+
+        stage('Update Deployment File') {
+            agent { label 'your-host-node' } // Node with git installed
+            steps {
+                script {
                     sh '''
                         cd ${WORKSPACE}/spring-boot-app-deplyment
-                        git config user.email "${GIT_EMAIL}"
+                        git config user.email "induwaramihisara@gmail.com"
                         git config user.name "Induwara Mihisara"
-                        BUILD_NUMBER=${BUILD_NUMBER}
                         sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" deployment.yml
                         git add deployment.yml
-                        git commit -m "Update deployment image to version ${BUILD_NUMBER}" || echo "No changes"
-                        git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                        git commit -m "Update deployment image to version ${BUILD_NUMBER}" || echo "No changes to commit"
+                        git push https://${GITHUB_TOKEN}@github.com/Mihisara29/Ultimate-CI-CD-Pipeline-SpringBoot-Application HEAD:main
                     '''
                 }
             }
@@ -78,8 +56,11 @@ pipeline {
     }
 
     post {
-        always { echo "Pipeline finished." }
-        success { echo "Pipeline succeeded!" }
-        failure { echo "Pipeline failed!" }
+        success {
+            echo "Pipeline finished successfully!"
+        }
+        failure {
+            echo "Pipeline failed!"
+        }
     }
 }
