--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -1,10 +1,5 @@
 pipeline {
-    agent {
-        docker {
-            image 'maven:3.9.4-eclipse-temurin-17'
-            args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
-        }
-    }
+    agent none
 
     environment {
         SONAR_URL = "http://44.220.247.54:9000"
@@ -17,6 +12,7 @@ pipeline {
     stages {
 
         stage('Checkout') {
+            agent any
             steps {
                 echo 'Checking out the repository...'
                 git branch: 'main', url: 'https://github.com/Mihisara29/Ultimate-CI-CD-Pipeline-SpringBoot-Application.git'
@@ -24,6 +20,12 @@ pipeline {
         }
 
         stage('Build and Test') {
+            agent {
+                docker {
+                    image 'maven:3.9.4-eclipse-temurin-17'
+                    args '--user root'
+                }
+            }
             steps {
                 dir('spring-boot-app') {
                     sh 'mvn clean package -B'
@@ -32,6 +34,12 @@ pipeline {
         }
 
         stage('Static Code Analysis') {
+            agent {
+                docker {
+                    image 'maven:3.9.4-eclipse-temurin-17'
+                    args '--user root'
+                }
+            }
             steps {
                 withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
                     dir('spring-boot-app') {
@@ -42,22 +50,23 @@ pipeline {
         }
 
         stage('Build and Push Docker Image') {
+            agent any  // This stage requires Docker installed on the host
             steps {
                 script {
                     def dockerImageTag = "${DOCKER_IMAGE_BASE}:${BUILD_NUMBER}"
                     dir('spring-boot-app') {
                         sh "docker build -t ${dockerImageTag} -f Dockerfile ."
                     }
-                    def dockerImage = docker.image(dockerImageTag)
                     docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
-                        dockerImage.push()
-                        dockerImage.push("latest")
+                        docker.image(dockerImageTag).push()
+                        docker.image(dockerImageTag).push("latest")
                     }
                 }
             }
         }
 
         stage('Update Deployment File') {
+            agent any
             steps {
                 withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                     sh '''
@@ -73,7 +82,6 @@ pipeline {
             }
         }
 
-    } // <-- closes stages
+    } // stages
 
-  
-} // <-- closes pipeline
+} // pipeline
