--- a/spring-boot-app-deplyment/deployment.yml
+++ b/spring-boot-app-deplyment/deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: spring-boot-app
-          image: im29/ultimate-cicd:replaceImageTag
+          image: im29/ultimate-cicd:9
           ports:
             - containerPort: 8080
           env:
